[package]
name = "rv6"
version = "0.1.0"
authors = ["David Coffill <david@coffill.net>"]

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = "0.8.1"
spin = "0.4.0"
rlibc = "1.0"
#goblin = "0.0.8"
linked_list_allocator = "0.2.5"
bitflags = "0.8"

[dependencies.lazy_static]
version = "0.2"
features = ["spin_no_std"]

