[package]
name = "cofflos"
version = "0.1.0"
authors = ["David Coffill <david@coffill.net>"]

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = { git = "https://github.com/dcoffill/rust-x86.git"  }
spin = "0.4.0"
rlibc = "1.0"
#goblin = "0.0.8"
#linked_list_allocator = "0.2.5"
bitflags = "0.9"
slice-cast = "0.1.2"
smoltcp = { version = "0.3", default-features = false, features = ["collections", "alloc", "verbose", ] }
mem_utils = { path="lib/mem_utils" }
kalloc = { path="lib/kalloc" }
pci = { path="lib/pci" }
log = { version = "0.3", default-features = false }
spinlock = { path = "lib/spinlock" }


[dependencies.lazy_static]
version = "0.2"
features = ["spin_no_std"]

[dependencies.simple_fs]
path = "lib/simple_fs"
